# forge-obsidian

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  INSTALL.md  Makefile  README.md  VERIFY.md  config.yaml  defaults.yaml  module.yaml  promote.yaml  test.sh
.claude-plugin/: plugin.json
.githooks/: pre-commit
.github/: copilot-instructions.md
SYSTEM/: CONVENTIONS.md
hooks/: session-start.sh  skill-load.sh
lib/: load.sh
rules/: ObsidianFrontmatter.md  Wikilinks.md
skills/Draft/: SKILL.md  SKILL.yaml
skills/ObsidianActions/: SKILL.md  SKILL.yaml
skills/ObsidianBase/: SKILL.md  SKILL.yaml
skills/ObsidianCLI/: SKILL.md  SKILL.yaml  sample.md
skills/ObsidianConventions/: SKILL.md
skills/ObsidianREST/: SKILL.md  SKILL.yaml
skills/ObsidianTemplates/: SKILL.md  SKILL.yaml
skills/ProjectConventions/: SKILL.md
skills/ProjectManagement/: SKILL.md  SKILL.yaml
skills/ProjectTemplate/: SKILL.md
skills/Promote/: SKILL.md  SKILL.yaml
skills/ValidateVault/: SKILL.md
skills/VaultOperations/: SKILL.md  SKILL.yaml
skills/WikiLink/: SKILL.md  SKILL.yaml  sample.md
skills/obsidian-conventions/: SKILL.md
src/: SYSTEM.md  lib.rs
src/base/: mod.rs  tests.rs
src/eval/: mod.rs  tests.rs
src/note/: mod.rs  tests.rs
src/vault/: mod.rs  tests.rs
tests/: test.sh
