[package]
name = "forge-obsidian"
version = "0.1.0"
edition = "2021"
description = "Obsidian vault tools — base resolver, vault conventions"
license = "EUPL-1.2"

[lib]
name = "forge_obsidian"
path = "src/lib.rs"

[[bin]]
name = "obsidian-base"
path = "src/bin/obsidian_base.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
strip = true
lto = true
